# data_contracts_management

./: .gitignore  README.md  basic_ge_demo.py  config.py  final_ge_demo.py  ge_example.py  ge_integration.py  main.py  pyproject.toml  schema.py  simple_ge_example.py  validation_example.py  validator.py
data/: __init__.py  examples.py  generator.py
data_contracts_management/: __init__.py  api.py  contract_manager.py  models.py  openmetadata_integration.py
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  customer_suite_20250905_081811.json
logs/: validation_report_customer_20250905_080005.json  validation_report_order_20250905_080005.json
scripts/: setup_sample_data.py
