[project]
name = "data-contracts-management"
version = "0.1.0"
description = "Sistema de gerenciamento de contratos de dados com Great Expectations e OpenMetadata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-expectations>=0.18.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
data-contracts = "data_contracts_management.cli:app"
