[project]
name = "data-contracts-management"
version = "0.1.0"
description = "Gerenciamento de contratos de dados usando OpenMetadata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openmetadata-ingestion>=1.2.0",
    "great-expectations>=0.18.0",
    "pandas>=2.1.0",
    "pyyaml>=6.0.1"
]
